# python-init-template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml
